--- a/xp-embedded-state.html
+++ b/xp-embedded-state.html
@@ -7,11 +7,11 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-This component is used to add embed capabilities on the context element.
+This element is used to add embed capabilities on the context element.
 It extends the native html `template`.
 
-@component xp-embedded-state
-@description This component is used to add embed capabilities on the context element.
+@element xp-embedded-state
+@description This element is used to add embed capabilities on the context element.
 @extends template
 
 @dependency polymer Polymer/polymer#^0.5
@@ -24,7 +24,7 @@ It extends the native html `template`.
 <polymer-element name="xp-embedded-state" extends="template" attributes="context embedded">
 
     <script>
-        XPComponent({
+        XPElement({
 
             // PUBLISH
             publish: {
