--- a/xp-embedded-state.html
+++ b/xp-embedded-state.html
@@ -12,6 +12,8 @@ It extends the native html `template`.
 
 @element xp-embedded-state
 @description This element is used to add embed capabilities on the context element.
+@homepage http://www.expandjs.com/elements/xp-embedded-state
+
 @extends template
 
 @dependency polymer Polymer/polymer#^0.5
