--- a/xp-embedded-state.html
+++ b/xp-embedded-state.html
@@ -42,7 +42,7 @@ It extends the native html `template`.
                 /**
                  * If set to true, the element is embedded.
                  *
-                 * @attribute disabled
+                 * @attribute embedded
                  * @type boolean
                  * @default false
                  */
