--- a/xp-embedded-state.html
+++ b/xp-embedded-state.html
@@ -13,7 +13,7 @@ It extends the native html `template`.
 @element xp-embedded-state
 @description A custom element able to recognize whether it's inside an iframe or not
 @group states
-@homepage http://www.expandjs.com/elements/xp-embedded-state
+@homepage http://expandjs.com/elements/xp-embedded-state
 
 @extends template
 
