--- a/xp-embedded-state.html
+++ b/xp-embedded-state.html
@@ -12,6 +12,7 @@ It extends the native html `template`.
 
 @element xp-embedded-state
 @description A custom element able to recognize whether it's inside an iframe or not
+@keywords web app, html5, expandjs
 @group states
 @homepage http://expandjs.com/elements/xp-embedded-state
 
