--- a/xp-embedded-state.html
+++ b/xp-embedded-state.html
@@ -30,6 +30,9 @@ It extends the native html `template`.
     <script>
         XPElement({
 
+            // ELEMENT
+            is: 'xp-embedded-state',
+
             // PUBLISH
             publish: {
 
